Adding style.css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
             <div class="starter-template">
                 <h1>TLDRecipes</h1>
-                <p class="lead">A simple way to make and use recipes</p>
+                <p class="lead">A simple way to make and use recipes
+                <br> Search for your favorite recipes here.</p>
             </div>
 
         </div><!-- /.container -->
