--- a/allen.html
+++ b/allen.html
@@ -34,10 +34,8 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="allen.html" target="_blank">Allen</a></li>
-                        <li><a href="cassio.html" target="_blank">Cassio</a></li>
-                        <li><a href="sid.html" target="_blank">Sidhart</a></li>
-                        <li><a href="william.html" target="_blank">William</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                     <form>
                         <input type="search" name="mainbar">
