--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -11,10 +11,10 @@
         <title>TLDRecipes</title>
 
         <!-- Bootstrap core CSS -->
-        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="../css/style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
 
     </head>
 
@@ -34,8 +34,10 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="allen/allen.html" target="_blank">Allen</a></li>
+                        <li><a href="cassio/cassio.html" target="_blank">Cassio</a></li>
+                        <li><a href="sid/sid.html" target="_blank">Sidhart</a></li>
+                        <li><a href="will/william.html" target="_blank">William</a></li>
                     </ul>
                     <form>
                         <input type="search" name="mainbar">
@@ -47,7 +49,7 @@
         <div class="container">
 
             <div class="starter-template">
-                <h1>TLDRecipes</h1>
+                <h1>TL;DRecipes</h1>
                 <p class="lead">A simple way to make and use recipes.
                 <br> Search for your favorite recipes here.</p>
             </div>
