Add CSS files and restructured submit pages for prototype

--- a/will/recipe.html
+++ b/will/recipe.html
@@ -1,1 +1,13 @@
- 
+<!DOCTYPE html>
+
+<html>
+	<head>
+		<title>Recipe Page | TLDRecipes</title>
+		<link href="./recipe.css" rel="stylesheet">
+	</head>
+	<body>
+		<div class="content">
+			
+		</div>
+	</body>
+</html>
