--- a/will/recipe.html
+++ b/will/recipe.html
@@ -7,7 +7,9 @@
 	</head>
 	<body>
 		<div class="content">
-			
+
 		</div>
 	</body>
+	<script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
+	<script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
 </html>
