--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -15,6 +15,7 @@
 
         <!-- Custom styles for this template -->
         <link href="../css/style.css" rel="stylesheet">
+        <link href="../css/advanced.css" rel="stylesheet">
 
     </head>
 
@@ -47,15 +48,18 @@
         <div class="container">
 
             <div class="starter-template">
-                <h1>TL;DRecipes</h1>
-                <p class="lead">A simple way to make and use recipes.
-                    <br> Search for your favorite recipes here.</p>
+                <h1>Advanced Search</h1>
+                <form id="advance_form" action="">
+                    <input type="radio" name="sex" value="male">Male<br>
+                    <input type="radio" name="sex" value="female">Female
+                </form>
             </div>
 
         </div><!-- /.container -->
         <!-- Bootstrap core JavaScript -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="js/ie10-viewport-bug-workaround.js"></script>
