Minor additions to the Advanced page

--- a/index.html
+++ b/index.html
@@ -39,19 +39,34 @@
                         <li><a href="sid/sid.html" target="_blank">Sidhart</a></li>
                         <li><a href="will/william.html" target="_blank">William</a></li>
                     </ul>
-                    <form>
-                        <input type="search" name="mainbar">
-                    </form>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="input-group">
+                                <input type="text" class="form-control">
+                                <div class="input-group-btn">
+                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span></button>
+                                    <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                                        <li><a href="#">Action</a></li>
+                                        <li><a href="#">Another action</a></li>
+                                        <li><a href="#">Something else here</a></li>
+                                        <li class="divider"></li>
+                                        <li><a href="#">Separated link</a></li>
+                                    </ul>
+                                </div><!-- /btn-group -->
+                            </div><!-- /input-group -->
+                        </div><!-- /.col-lg-6 -->
+                    </div><!-- /.row --><!-- This is the new search bar-->
                 </div><!--/.nav-collapse -->
             </div>
         </div>
 
         <div class="container">
 
+
             <div class="starter-template">
                 <h1>TLDRecipes</h1>
                 <p class="lead">A simple way to make and use recipes.
-                <br> Search for your favorite recipes here.</p>
+                    <br> Search for your favorite recipes here.</p>
             </div>
 
         </div><!-- /.container -->
