--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -21,6 +21,7 @@
 
     <body>
 
+        
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -35,23 +36,41 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="allen/allen.html" target="_blank">Allen</a></li>
+                        <li><a href="cassio/advanced.html" target="_blank">Cassio</a></li>
+                        <li><a href="sid/sid.html" target="_blank">Sidhart</a></li>
+                        <li><a href="will/william.html" target="_blank">William</a></li>
                     </ul>
-                    <form>
-                        <input type="search" name="mainbar">
-                    </form>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="input-group">
+                                <input type="text" class="form-control">
+                                <div class="input-group-btn">
+                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span></button>
+                                    <ul class="dropdown-menu dropdown-menu-right" role="menu">
+                                        <li><a href="#">Action</a></li>
+                                        <li><a href="#">Another action</a></li>
+                                        <li><a href="#">Something else here</a></li>
+                                        <li class="divider"></li>
+                                        <li><a href="#">Separated link</a></li>
+                                    </ul>
+                                </div><!-- /btn-group -->
+                            </div><!-- /input-group -->
+                        </div><!-- /.col-lg-6 -->
+                    </div><!-- /.row --><!-- This is the new search bar-->
                 </div><!--/.nav-collapse -->
             </div>
         </div>
 
+        
         <div class="container">
 
             <div class="starter-template">
-                <h1>Advanced Search</h1>
+                <h1>Search by:</h1>
                 <form id="advance_form" action="">
-                    <input type="radio" name="sex" value="male">Male<br>
-                    <input type="radio" name="sex" value="female">Female
+                    <input type="radio" name="search_by" value="keyword">Keyword<br>
+                    <input type="radio" name="search_by" value="ingredient">Ingredient<br>
+                    <input type="radio" name="search_by" value="prep_time">Preparation time<br>
                 </form>
             </div>
 
