--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -15,13 +15,13 @@
 
         <!-- Custom styles for this template -->
         <link href="../css/style.css" rel="stylesheet">
-        <link href="../css/advanced.css" rel="stylesheet">
+        <link href="./advanced.css" rel="stylesheet">
 
     </head>
 
     <body>
 
-        
+
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -62,15 +62,30 @@
             </div>
         </div>
 
-        
+
         <div class="container">
 
-            <div class="starter-template">
-                <h1>Search by:</h1>
+            <div id="advanced-menu">
+                <h1>Search recipes with:</h1>
                 <form id="advance_form" action="">
-                    <input type="radio" name="search_by" value="keyword">Keyword<br>
-                    <input type="radio" name="search_by" value="ingredient">Ingredient<br>
-                    <input type="radio" name="search_by" value="prep_time">Preparation time<br>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="input-group">
+                                <span class="input-group-addon">These ingredients:</span>
+                                <input type="text" class="form-control">
+                            </div><!-- /input-group -->
+                        </div><!-- /.col-lg-6 -->
+                    </div><!-- /.row -->
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="input-group">
+                                <span class="input-group-addon">But not these ingredients:</span>
+                                <input type="text" class="form-control">
+                            </div><!-- /input-group -->
+                        </div><!-- /.col-lg-6 -->
+                    </div><!-- /.row -->
+                    <input type="checkbox" name="search_by" value="ingredient">Ingredient<br>
+                    <input type="checkbox" name="search_by" value="prep_time">Preparation time<br>
                 </form>
             </div>
 
