--- a/will/submit2.html
+++ b/will/submit2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,59 +8,29 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <link rel="icon" href="">
-
-        <title>Submit a Recipe | Step 1 | TLDRecipes</title>
-
-        <!-- Bootstrap core CSS -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- Custom styles for this template -->
-        <link href="css/style.css" rel="stylesheet">
-
+        <title>Step 1 | Submit a Recipe | TLDRecipes</title>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
+        <link href="../css/font-awesome.min.css" rel="stylesheet">
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <link href="./submit.css" rel="stylesheet">
     </head>
-
     <body>
-
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="" target="_blank">TL;DRecipes</a>
+        <!-- Navbar Goes Here -->
+        <div class="content">
+            <div class="header">
+                <div class="title">Submit A Recipe</div>
+                <div class="step">STEP 2</div>
+            </div>
+             <section>
+                <div class="goback">
+                    <a href="./submit1.html"><i class="fa fa-arrow-circle-left fa-3x"></i><span class="steptext">Previous Step</span></a>
                 </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                    <form>
-                        <input type="search" name="mainbar">
-                    </form>
-                </div><!--/.nav-collapse -->
-            </div>
+                <div class="goforward">
+                    <a href="./submit3.html"><span class="steptext">Next Step</span><i class="fa fa-arrow-circle-right fa-3x"></i></a>
+                </div>
+            </section>
         </div>
-
-        <div class="container">
-
-            <div class="starter-template">
-                <h1>TLDRecipes</h1>
-                <p class="lead">A simple way to make and use recipes.
-                <br> Search for your favorite recipes here.</p>
-            </div>
-
-        </div><!-- /.container -->
-        <!-- Bootstrap core JavaScript -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="js/ie10-viewport-bug-workaround.js"></script>
-
-
     </body>
+    <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
+    <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
 </html>
