--- a/sid/Sign In Page.html
+++ b/sid/Sign In Page.html
@@ -8,13 +8,16 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>TL;DRecipes Sign in Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="stylesheet.css" rel="stylesheet">
+
+    <!--Font-->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -29,8 +32,8 @@
     <div class="container">
 
       <form class="form-signin" role="form">
-        <h2 class="form-signin-heading">TLDRecipes</h2>
-        <input type="email" class="form-control" placeholder="Email address" <!-- required autofocus--> >
+        <h2 class="form-signin-heading">TL;DRecipes</h2>
+        <input type="email" class="form-control" placeholder="Email address" <!-- required autofocus--> 
         <input type="password" class="form-control" placeholder="Password" required>
         <div class="checkbox">
           <label>
