--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -8,7 +8,7 @@
         <meta name="author" content="">
         <link rel="icon" href="">
 
-        <title>TLDRecipes</title>
+        <title>TL;DRecipes</title>
 
         <!-- Bootstrap core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -17,67 +17,17 @@
         <link href="../css/style.css" rel="stylesheet">
         <link href="./advanced.css" rel="stylesheet">
 
+        <!-- Font loading -->
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+
     </head>
 
     <body>
 
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="" target="_blank">TL;DRecipes</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">Recently Submitted</a></li>
-                                <li><a href="#">Most Popular</a></li>
-                                <li><a href="#">Highest Success Rate</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">???</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Create Recipe</a></li>
-                    </ul>
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group input-group">
-                            <input type="text" class="form-control" placeholder="Find a recipe or user">
-                            <div class="input-group-btn">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="nav-search-filter">Recipes</span> <span class="caret"></span></button>
-                                <ul class="dropdown-menu dropdown-menu-right" role="menu">
-                                    <li><a href="#">Recipes</a></li>
-                                    <li><a href="#">Users</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-default">Search</button>
-                    </form>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Create Account</a></li>
-                        <li><a href="#">Sign In</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">View Profile</a></li>
-                                <li><a href="#">Get Recommendations</a></li>
-                                <li><a href="#">Edit Settings</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Sign out</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div><!-- ./collapse navbar-collapse -->
-            </div>
-        </div>
         <div class="container">
             <div id="advanced-menu">
+                <h1>Advanced Search</h1>
+                <br>
                 <form id="advance_form" action="">
                     <h2>Search recipes by user:</h2>
                     <div class="row">
@@ -171,12 +121,8 @@
         </div><!-- /.container -->
         <!-- Bootstrap core JavaScript -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="js/ie10-viewport-bug-workaround.js"></script>
-
-
+        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
+		<script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="../allen/navbar.js"></script>
     </body>
 </html>
