--- a/sid/Sign In Page.html
+++ b/sid/Sign In Page.html
@@ -14,7 +14,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="stylesheet.css" rel="stylesheet">
+    <link href="../sid/stylesheet.css" rel="stylesheet">
 
     <!--Font-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
