--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -8,7 +8,7 @@
         <meta name="author" content="">
         <link rel="icon" href="">
 
-        <title>TL;DRecipes</title>
+        <title>Advanced Search | TL;DRecipes</title>
 
         <!-- Bootstrap core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
         <link href="./advanced.css" rel="stylesheet">
 
         <!-- Font loading -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
 
     </head>
 
@@ -122,7 +122,7 @@
         <!-- Bootstrap core JavaScript -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
-		<script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="../js/vendor/bootstrap.min.js"></script>
         <script src="../allen/navbar.js"></script>
     </body>
 </html>
