--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -8,60 +8,32 @@
         <meta name="author" content="">
         <link rel="icon" href="">
 
-        <title>TLDRecipes</title>
+        <title>User Page | TL;DRecipes</title>
 
         <!-- Bootstrap core CSS -->
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="../css/style.css" rel="stylesheet">
+        <link href="./userpage.css" rel="stylesheet">
+
+        <!-- Font loading -->
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
 
     </head>
 
     <body>
 
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="" target="_blank">TL;DRecipes</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="allen/allen.html" target="_blank">Allen</a></li>
-                        <li><a href="cassio/cassio.html" target="_blank">Cassio</a></li>
-                        <li><a href="sid/sid.html" target="_blank">Sidhart</a></li>
-                        <li><a href="will/william.html" target="_blank">William</a></li>
-                    </ul>
-                    <form>
-                        <input type="search" name="mainbar">
-                    </form>
-                </div><!--/.nav-collapse -->
-            </div>
-        </div>
-
         <div class="container">
-
-            <div class="starter-template">
-                <h1>TL;DRecipes</h1>
-                <p class="lead">A simple way to make and use recipes.
-                <br> Search for your favorite recipes here.</p>
-            </div>
-
+            <div id="user-page">
+                <h1>User page</h1>
+                <br>
+            </div><!-- /.user-page -->
         </div><!-- /.container -->
         <!-- Bootstrap core JavaScript -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <script src="js/ie10-viewport-bug-workaround.js"></script>
-
-
+        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="../allen/navbar.js"></script>
     </body>
 </html>
