Updated User Page in a responsive way

--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -26,8 +26,28 @@
 
         <div class="container">
             <div id="user-page">
-                <h1>User page</h1>
+                <h1>Username</h1>
                 <br>
+                <div id="user-image">
+                    <img class="img-responsive" alt="200x200" src="../img/square.svg" data-holder-rendered="true">
+                </div>
+                <br>
+                <h2>User info</h2>
+                <br>
+                <div id="user-info">
+                    <ul>
+                        <li>Recipes submitted: --</li>
+                        <li>Recipes favored: --</li>
+                        <li>Joined at: Nov-8-2014 17:16 GMT-06:00</li>
+                        <li>Last active: 2 days ago</li>
+                    </ul>
+                </div>
+                <br>
+                <h2>About Me</h2>
+                <br>
+                <div id="about-me">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pretium urna ut risus cursus varius. Phasellus malesuada in dui quis fringilla. Sed in ligula id magna auctor imperdiet a aliquet diam. Pellentesque rutrum lacinia ultrices. Proin nec nulla tempor, efficitur eros at, sodales lacus. Mauris ut augue leo. In eget felis in purus viverra pretium. Maecenas vel tortor ullamcorper lorem sodales tempor sit amet ac justo. Ut id ultricies libero. Nam tempus odio vel gravida blandit. Morbi amet.</p>
+                </div>
             </div><!-- /.user-page -->
         </div><!-- /.container -->
         <!-- Bootstrap core JavaScript -->
