First version of User Page

--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -48,6 +48,11 @@
                 <div id="about-me">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pretium urna ut risus cursus varius. Phasellus malesuada in dui quis fringilla. Sed in ligula id magna auctor imperdiet a aliquet diam. Pellentesque rutrum lacinia ultrices. Proin nec nulla tempor, efficitur eros at, sodales lacus. Mauris ut augue leo. In eget felis in purus viverra pretium. Maecenas vel tortor ullamcorper lorem sodales tempor sit amet ac justo. Ut id ultricies libero. Nam tempus odio vel gravida blandit. Morbi amet.</p>
                 </div>
+                <br>
+                <h2>Recipes you submitted</h2>
+                <br>
+                <h2>Favored recipes</h2>
+                <br>
             </div><!-- /.user-page -->
         </div><!-- /.container -->
         <!-- Bootstrap core JavaScript -->
