--- a/sid/New_user.html
+++ b/sid/New_user.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>TL;DRecipes Sign in Page</title>
+    <title>TL;DRecipes New User Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -32,9 +32,9 @@
     <div class="container">
 
       <form class="form-signin" role="form">
-
-        <h2 class="form-signin-heading">TL;DRecipes</h2>
+        <h2 class="form-signin-heading">Sign up for TL;DRecipes</h2>
         <input type="email" class="form-control" placeholder="Email address" autofocus >
+        <input type="name" class="form-control" placeholder="User Name">
         <input type="password" class="form-control" placeholder="Password">
         <div class="checkbox">
           <label>
@@ -42,7 +42,7 @@
           </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <button onclick="window.location.href = '../sid/New_user.html'" class="btn btn-lg btn-primary btn-block" type="button">Create New Account</button>
+        <button onclick="window.location.href = '../sid/Sign in Page.html'" class="btn btn-lg btn-primary btn-block" type="button">Already a user?</button>
 
       </form>
 
