--- a/sid/New_user.html
+++ b/sid/New_user.html
@@ -18,8 +18,6 @@
 
     <!--Font-->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
-
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -36,11 +34,13 @@
         <input type="email" class="form-control" placeholder="Email address" autofocus >
         <input type="name" class="form-control" placeholder="User Name">
         <input type="password" class="form-control" placeholder="Password">
-        <div class="checkbox">
+
+        <!--    <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
-        </div>
+        </div> -->
+
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <button onclick="window.location.href = '../sid/Sign in Page.html'" class="btn btn-lg btn-primary btn-block" type="button">Already a user?</button>
 
