Updated Advanced Search page, added color scheme

--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -78,16 +78,26 @@
                     <h2>Preparation time limit:</h2>
                     <div class="row">
                         <div class="col-lg-6">
-                            <div class="input-group">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default btn-active" type="button">None</button>
-                                    <button type="button" class="btn btn-default">15 minutes</button>
-                                    <button type="button" class="btn btn-default">30 minutes</button>
-                                    <button type="button" class="btn btn-default">45 minutes</button>
-                                    <button type="button" class="btn btn-default">1 hours</button>
-                                    <button type="button" class="btn btn-default">2 hours</button>
-                                </span>
-                            </div><!-- /input-group -->
+                            <div class="btn-group" data-toggle="buttons">
+                                <label class="btn btn-primary active">
+                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> None
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option2" autocomplete="off"> 15 minutes
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option3" autocomplete="off"> 30 minutes
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option4" autocomplete="off"> 45 minutes
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option5" autocomplete="off"> 1 hour
+                                </label>
+                                <label class="btn btn-primary">
+                                    <input type="radio" name="options" id="option6" autocomplete="off"> 2 hours
+                                </label>
+                            </div><!-- ./btn-group -->
                         </div><!-- /.col-lg-6 -->
                     </div><!-- /.row -->
                     <br>
