--- a/allen/card.html
+++ b/allen/card.html
@@ -17,49 +17,27 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800' rel='stylesheet' type='text/css'>
 
 		<!-- Custom styles for this template -->
-		<link href="card.css" rel="stylesheet">
+		<link href="../allen/card.css" rel="stylesheet">
 
 
 		<!-- Bootstrap core JavaScript -->
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="../js/vendor/jquery-2.1.1.min.js"></script>
 		<script src="../js/vendor/bootstrap.min.js"></script>
-		<script src="navbar.js"></script>
+
+		<!-- Load the navbar -->
+		<script src="../allen/navbar.js"></script>
+
+		<!-- Load recipe listings -->
+		<script src="../allen/card.js"></script>
 
 	</head>
 
 	<body>
-		<ul class="recipe-listing">
-			<li class="recipe-card">
-				<div class="recipe-card-img" style="background-image: url('card.jpg')">
-				</div>
-				<div class="recipe-card-info">
-					<div class="recipe-info-top-wrapper">
-						<div class="recipe-info-name-wrapper">
-							<div class="recipe-name"><a href="#">Pasta</a></div>
-							<div class="recipe-user">by <a href="#">pastafreak123</a></div>
-						</div>
-						<div class="recipe-diet">
-							<div class="diet-icon vegetarian">V</div>
-							<div class="diet-icon vegan">Vg</div>
-							<div class="diet-icon dairy">Df</div>
-							
-							<div class="diet-icon kosher">K</div>
-							<div class="diet-icon gluten">Gl</div>
-							
-						</div>
-					</div>
-					<div class="recipe-success">
-						<div class="success-bar">
-							<div class="success" style="width: 80%"></div>
-						</div>
-						<div class="success-text"><span class="success-rate">100%</span> success rate</div>
-					</div>
-					<div>
-						<span>Time: <span>1 hr</span> &amp; <span>30 min</span></span>
-					</div>
-				</div>
-			</li>
-		</ul>
+		<div class="container">
+			<h2>Recipes</h2>
+		</div>
+		<div class="recipes" data-length="6"></div>
+		<div class="recipes" data-length="2"></div>
 	</body>
 </html>
