Added cards and made minor changes on User Page

--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -8,7 +8,7 @@
         <meta name="author" content="">
         <link rel="icon" href="">
 
-        <title>User Page | TL;DRecipes</title>
+        <title>pastafreak123 | TL;DRecipes</title>
 
         <!-- Bootstrap core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
 
         <div class="container">
             <div id="user-page">
-                <h1>Username</h1>
+                <h1>pastafreak123</h1>
                 <br>
                 <div id="user-image">
                     <img class="img-responsive" alt="200x200" src="../img/square.svg" data-holder-rendered="true">
@@ -36,8 +36,8 @@
                 <br>
                 <div id="user-info">
                     <ul>
-                        <li>Recipes submitted: --</li>
-                        <li>Recipes favored: --</li>
+                        <li>Recipes submitted: 3</li>
+                        <li>Recipes favored: 3</li>
                         <li>Joined at: Nov-8-2014 17:16 GMT-06:00</li>
                         <li>Last active: 2 days ago</li>
                     </ul>
@@ -50,8 +50,10 @@
                 </div>
                 <br>
                 <h2>Recipes you submitted</h2>
+                <div class="recipes" data-length="3"></div>
                 <br>
                 <h2>Favored recipes</h2>
+                <div class="recipes" data-length="3"></div>
                 <br>
             </div><!-- /.user-page -->
         </div><!-- /.container -->
@@ -60,5 +62,6 @@
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
         <script src="../allen/navbar.js"></script>
+        <script src="../allen/card.js"></script>
     </body>
 </html>
