Changed the user image and adjusted it

--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -29,7 +29,7 @@
                 <h1>pastafreak123</h1>
                 <br>
                 <div id="user-image">
-                    <img class="img-responsive" alt="200x200" src="../img/square.svg" data-holder-rendered="true">
+                    <img class="img-responsive" alt="200x200" src="../img/pastafreak123.png" data-holder-rendered="true">
                 </div>
                 <br>
                 <h2>User info</h2>
@@ -49,7 +49,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pretium urna ut risus cursus varius. Phasellus malesuada in dui quis fringilla. Sed in ligula id magna auctor imperdiet a aliquet diam. Pellentesque rutrum lacinia ultrices. Proin nec nulla tempor, efficitur eros at, sodales lacus. Mauris ut augue leo. In eget felis in purus viverra pretium. Maecenas vel tortor ullamcorper lorem sodales tempor sit amet ac justo. Ut id ultricies libero. Nam tempus odio vel gravida blandit. Morbi amet.</p>
                 </div>
                 <br>
-                <h2>Recipes you submitted</h2>
+                <h2>Submitted recipes</h2>
                 <div class="recipes" data-length="3"></div>
                 <br>
                 <h2>Favored recipes</h2>
