Updated recipe card list alignment, randomized success rate

--- a/allen/card.html
+++ b/allen/card.html
@@ -34,7 +34,7 @@
 	</head>
 
 	<body>
-		<div class="container">
+		<div class="container" style="background: gray">
 			<h2>Recipes</h2>
 		</div>
 		<div class="recipes" data-length="6"></div>
