--- a/sid/Jumbotron.html
+++ b/sid/Jumbotron.html
@@ -32,9 +32,15 @@
 				<div class="jumbotron">
 				  <!-- <div class="transparent"></div> -->
 				  <h1>Welcome to TL;DR Recipes!</h1>
-				  <p>Words and such</p>
-				  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+				  <p>A simple way to make and use recipes.</p>
+				  <p>Search for your favorite recipes here.</p>
+				  <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign Up</a></p>
 				</div>				
 			</div>
 		</div>
+
+		<!-- Placed at the end of the document so the pages load faster -->
+        <script src="../js/vendor/jquery-2.1.1.min.js"></script>
+        <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="../allen/navbar.js"></script>
 	</body>
