--- a/sid/Sign In Page.html
+++ b/sid/Sign In Page.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>TL;DRecipes Sign in Page</title>
+    <title>Sign in | TL;DRecipes</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
