--- a/sid/New_user.html
+++ b/sid/New_user.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>TL;DRecipes New User Page</title>
+    <title>New User | TL;DRecipes</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
