--- a/will/submit1.html
+++ b/will/submit1.html
@@ -97,4 +97,7 @@
     <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
     <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
     <script src="../js/vendor/dropzone.js" type="text/javascript"></script>
+    <script src="../js/vendor/jquery-2.1.1.min.js"></script>
+    <script src="../js/vendor/bootstrap.min.js"></script>
+    <script src="../allen/navbar.js"></script>
 </html>
