Sent Title and Favicon to Header.js

--- a/will/recipe.html
+++ b/will/recipe.html
@@ -2,8 +2,10 @@
 
 <html>
 	<head>
-		<title>Recipe Page | TLDRecipes</title>
+		<title>Recipe Page | TL;DRecipes</title>
 		<link href="./recipe.css" rel="stylesheet">
+        <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 		<div class="content">
