--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -6,10 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
 
-        <title>Advanced Search | TL;DRecipes</title>
+        <!-- Font loading -->
+        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
 
         <!-- Bootstrap core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -18,8 +17,8 @@
         <link href="../css/style.css" rel="stylesheet">
         <link href="./advanced.css" rel="stylesheet">
 
-        <!-- Font loading -->
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+        <!-- Custom title -->
+        <title>Advanced Search</title>
 
     </head>
 
@@ -134,6 +133,7 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="header.js"></script>
         <script src="../allen/navbar.js"></script>
     </body>
 </html>
