--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -6,10 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
-
-        <title>pastafreak123 | TL;DRecipes</title>
 
         <!-- Bootstrap core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +16,9 @@
 
         <!-- Font loading -->
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" type="text/css">
+
+        <!-- Custom title -->
+        <title>pastafreak123</title>
 
     </head>
 
@@ -53,7 +52,7 @@
                 <h2>Submitted recipes</h2>
                 <div class="recipes" data-length="3"></div>
                 <br>
-                <h2>Favored recipes</h2>
+                <h2>Favorited recipes</h2>
                 <div class="recipes" data-length="3"></div>
                 <br>
             </div><!-- /.user-page -->
@@ -62,6 +61,7 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
+        <script src="header.js"></script>
         <script src="../allen/navbar.js"></script>
         <script src="../allen/card.js"></script>
     </body>
