Fixed home page search filter

--- a/allen/home.html
+++ b/allen/home.html
@@ -30,6 +30,8 @@
 		<!-- Load recipe listings -->
 		<script src="../allen/card.js"></script>
 
+		<script src="../allen/home.js"></script>
+
 	</head>
 
 	<body>
