Added "See all" buttons to User Page

--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -51,9 +51,12 @@
                 <br>
                 <h2>Submitted recipes</h2>
                 <div class="recipes" data-length="3"></div>
+                <a class="btn btn-primary btn-lg" href="#" role="button">See all submitted recipes</a>
                 <br>
                 <h2>Favorited recipes</h2>
                 <div class="recipes" data-length="3"></div>
+                <a class="btn btn-primary btn-lg" href="#" role="button">See all favorited recipes</a>
+                <br>
                 <br>
             </div><!-- /.user-page -->
         </div><!-- /.container -->
