Updated head elements

--- a/allen/card.html
+++ b/allen/card.html
@@ -4,21 +4,20 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<link rel="icon" href="">
 
-		<title>TL&#59;DRecipes</title>
+		<title>Recipe Card Test</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="../css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Font loading -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,800' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+
+		<!-- Load global stylesheet -->
+		<link href="../allen/global.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
 		<link href="../allen/card.css" rel="stylesheet">
-
 
 		<!-- Bootstrap core JavaScript -->
 		<!-- Placed at the end of the document so the pages load faster -->
@@ -27,6 +26,9 @@
 
 		<!-- Load the navbar -->
 		<script src="../allen/navbar.js"></script>
+
+		<!-- Load head elements -->
+		<script src="../cassio/header.js"></script>
 
 		<!-- Load recipe listings -->
 		<script src="../allen/card.js"></script>
