--- a/allen/home.html
+++ b/allen/home.html
@@ -4,17 +4,17 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<link rel="icon" href="">
 
-		<title>TL&#59;DRecipes</title>
+		<title>Welcome to TL&#59;DRecipes</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="../css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Font loading -->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+
+		<!-- Load global stylesheet -->
+		<link href="../allen/global.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
 		<link href="../allen/home.css" rel="stylesheet">
@@ -30,7 +30,8 @@
 		<!-- Load recipe listings -->
 		<script src="../allen/card.js"></script>
 
-		<script src="../allen/home.js"></script>
+		<!-- Load head elements -->
+		<script src="../cassio/header.js"></script>
 
 	</head>
 
