--- a/allen/navbar.html
+++ b/allen/navbar.html
@@ -4,29 +4,28 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<link rel="icon" href="">
 
-		<title>TL&#59;DRecipes</title>
+		<title>Navbar Test</title>
 
 		<!-- Bootstrap core CSS -->
 		<link href="../css/bootstrap.min.css" rel="stylesheet">
 
 		<!-- Font loading -->
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
-		<!-- Custom styles for this template -->
-		<!--
-		<link href="navbar.css" rel="stylesheet">
-		-->
-
+		<!-- Load global stylesheet -->
+		<link href="../allen/global.css" rel="stylesheet">
 
 		<!-- Bootstrap core JavaScript -->
 		<!-- Placed at the end of the document so the pages load faster -->
 		<script src="../js/vendor/jquery-2.1.1.min.js"></script>
 		<script src="../js/vendor/bootstrap.min.js"></script>
-		<script src="navbar.js"></script>
+
+		<!-- Load the navbar -->
+		<script src="../allen/navbar.js"></script>
+
+		<!-- Load head elements -->
+		<script src="../cassio/header.js"></script>
 
 	</head>
 
