Updated a few headers to add Header.js to them

--- a/cassio/userpage.html
+++ b/cassio/userpage.html
@@ -10,7 +10,7 @@
         <!-- Bootstrap core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- Custom styles for this template -->
+        <!-- Custom styles for this page -->
         <link href="../css/style.css" rel="stylesheet">
         <link href="./userpage.css" rel="stylesheet">
 
@@ -58,8 +58,7 @@
                 <br>
             </div><!-- /.user-page -->
         </div><!-- /.container -->
-        <!-- Bootstrap core JavaScript -->
-        <!-- Placed at the end of the document so the pages load faster -->
+        <!-- JavaScript placed at the end of the document so the pages load faster -->
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
         <script src="header.js"></script>
