--- a/cassio/advanced.html
+++ b/cassio/advanced.html
@@ -10,7 +10,7 @@
         <!-- Bootstrap core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- Custom styles for this template -->
+        <!-- Custom styles for this page -->
         <link href="../css/style.css" rel="stylesheet">
         <link href="./advanced.css" rel="stylesheet">
 
@@ -126,8 +126,7 @@
                 </form>
             </div><!-- /.advanced-menu -->
         </div><!-- /.container -->
-        <!-- Bootstrap core JavaScript -->
-        <!-- Placed at the end of the document so the pages load faster -->
+        <!-- JavaScript placed at the end of the document so the pages load faster -->
         <script src="../js/vendor/jquery-2.1.1.min.js"></script>
         <script src="../js/vendor/bootstrap.min.js"></script>
         <script src="header.js"></script>
