--- a/will/recipe.html
+++ b/will/recipe.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-
 <html>
-	<head>
-		<title>Recipe Page | TL;DRecipes</title>
-		<link href="./recipe.css" rel="stylesheet">
-        <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
-	</head>
-	<body>
-		<div class="content">
+    <head>
+        <!-- Bootstrap core CSS -->
+        <link href="../css/bootstrap.min.css" rel="stylesheet">
+        <!-- Custom styles for this page -->
+        <link href="./recipe.css" rel="stylesheet">
+        <!-- Custom title -->
+        <title>Pasta</title>
+    </head>
+    <body>
+        <div class="content">
 
-		</div>
-	</body>
-	<script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
-	<script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
+        </div>
+        <!-- JavaScript placed at the end of the document so the pages load faster -->
+        <script src="../js/vendor/bootstrap.min.js" type="text/javascript"></script>
+        <script src="../js/vendor/jquery-1.11.1.js" type="text/javascript"></script>
+        <script src="../cassio/header.js"></script>
+    </body>
 </html>
